<resources>
    <string name="app_name">DailApp</string>
    <string name="btn_call">Call</string>

    <string name="btn_digit_1">1</string>
    <string name="btn_digit_2">2</string>
    <string name="btn_digit_3">3</string>
    <string name="btn_digit_4">4</string>
    <string name="btn_digit_5">5</string>
    <string name="btn_digit_6">6</string>
    <string name="btn_digit_7">7</string>
    <string name="btn_digit_8">8</string>
    <string name="btn_digit_9">9</string>
    <string name="btn_digit_0">0</string>
    <string name="btn_digit_asterisk">*</string>
    <string name="btn_digit_hashtag">#</string>
    <string name="btn_delete">Remove</string>
    <string name="btn_digit_delete_all">C</string>
    <string name="btn_digit_delete_once">B</string>
    <string name="plus">+</string>
</resources>
