<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dailapp.MainActivity">

    <TextView
        android:id="@+id/tv_tile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg"
        android:gravity="center"
        android:padding="5dp"
        android:text="DAILER"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/tv_tile"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="Switch on to automatic record your calls "
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tile" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/toggle_selector"
        android:onClick="toggleButtonClick"
        android:text="ToggleButton"
        android:textColor="#ffffff"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSubHeader" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_person"
                style="@style/MyTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Name"
                    style="@style/MyTextInputEditText"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_email"
                style="@style/MyTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    style="@style/MyTextInputEditText"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/call_icon"
                app:prefixText="+91"
                style="@style/MyTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:hint="Number"
                    android:editable="false"
                    android:maxLength="10"
                    style="@style/MyTextInputEditText"/>

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--Button 1-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_1"
                style="@style/DigitButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_digit_1" />

            <!--Button 2-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_2"
                style="@style/DigitButton2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_digit_2" />

            <!--Button 3-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_3"
                style="@style/DigitButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_digit_3" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--Button 4-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_4"
                style="@style/DigitButton2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_digit_4" />

            <!--Button 5-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_5"
                style="@style/DigitButton3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_digit_5" />

            <!--Button 6-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_6"
                style="@style/DigitButton2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_digit_6" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Button 7-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_7"
                style="@style/DigitButton3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_digit_7" />

            <!--Button 8-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_8"
                style="@style/DigitButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_digit_8" />

            <!--Button 9-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_9"
                style="@style/DigitButton3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_digit_9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_call"
                style="@style/CallerButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_call" />


            <!--Button 0-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_0"
                style="@style/DigitButton2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_digit_0" />

            <!--Button delete once-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_delete"
                style="@style/DeleteButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_delete"
                android:text="@string/btn_delete" />

        </LinearLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>